--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -715,3 +715,17 @@ a.desc:after {
 .span-plan2 {
     background-color: #80c780;
 }
+
+.colorLabel {
+    position: relative;
+    height: 19px;
+    border-radius: 4px !important;
+    color: white;
+    margin-bottom: 0;
+    background-color: #f5f5f5;
+    display: inline-block;
+    padding-left: 4px;
+    padding-right: 4px;
+    text-align: center;
+    font-size: 13px;
+}
